syntax = "proto3";

package coretex.v1;
option go_package = "github.com/yaront1111/coretex-os/core/protocol/pb/v1";

import "google/protobuf/timestamp.proto";
import "job.proto";
import "heartbeat.proto";

message BusPacket {
  string trace_id  = 1;
  string sender_id = 2;

  google.protobuf.Timestamp created_at = 3;

  uint32 protocol_version = 4;

  oneof payload {
    JobRequest job_request = 10;
    JobResult  job_result  = 11;
    Heartbeat  heartbeat   = 12;
    SystemAlert alert      = 13;
    WorkerList worker_list = 14;
  }
}

message WorkerList {
  repeated Heartbeat workers = 1;
}

message SystemAlert {
  string level     = 1; // "INFO", "WARN", "CRITICAL"
  string message   = 2;
  string component = 3;
}
